<resources>
    <string name="app_name">Cook Book</string>
    <string name="title_home">Recipes</string>
    <string name="title_dashboard">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="desert">Desert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade"><![CDATA[<Marinade>]]></string>
    <string name="finger_food">Finger Food</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole_30">Whole 30</string>
    <string name="low_fodmap">Low FodMap</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="lacto_vegetarian">Lacto-Vegetarian</string>
    <string name="ovo_vegetarian">Ovo-Vegetarian</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="search">Search</string>
    <string name="title_activity_recipe_details">RecipeDetailsActivity</string>
    <string name="details">Details</string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="diaryfree">DiaryFree</string>
    <string name="gluten_free_text">Gluten Free</string>
    <string name="vegan_textview">Vegan</string>
    <string name="vegetarian_textview">Vegetarian</string>
    <string name="save_to_fav">Save to Favorites</string>
    <string name="no_favorite_recipes">No Favorite Recipes!!</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>
</resources>